Lesson 8: add products and attributes(API); upd open api docs
