# app/Http/Controllers/Web/CatalogController.php
@@ -3,11 +3,11 @@
 namespace App\Http\Controllers\Web;
 
 use App\Http\Controllers\Controller;
-use App\Models\Product;
 use App\Models\ProductCategory;
 use Illuminate\Contracts\Foundation\Application;
 use Illuminate\Contracts\View\Factory;
 use Illuminate\Contracts\View\View;
+use Throwable;
 
 class CatalogController extends Controller
 {
@@ -24,13 +24,18 @@ class CatalogController extends Controller
         if ($slug === null) {
             $query->where('parent_id');
         } else {
-            $query->where('slug', $slug)->firstOrFail();
+            $query->where('slug', $slug);
         }
 
         $categories = $query->get();
-        $products = ProductCategory::getTreeProductBuilder($categories)
-            ->orderBy('id')
-            ->paginate();
+        try {
+            $products = ProductCategory::getTreeProductBuilder($categories)
+                ->orderBy('id')
+                ->paginate();
+        } catch(Throwable $e) {
+            abort(422, $e->getMessage());
+        }
+
 
         return view('catalog.catalog', ['categories' => $categories, 'products' => $products]);
     }
